allowed access to worker node on port 1337

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,11 +1,77 @@
 pipeline {
-    agent any
+  agent any
+ 
+  tools {
+  maven 'Maven3'
+  ***REMOVED***
+  stages {
+    stage ('Build') {
+      steps {
+      sh 'mvn clean install -f MyWebApp/pom.xml'
+      ***REMOVED***
+    ***REMOVED***
+    stage ('Code Quality') {
+      steps {
+        withSonarQubeEnv('SonarQube') {
+        sh 'mvn -f MyWebApp/pom.xml sonar:sonar'
+        ***REMOVED***
+      ***REMOVED***
+    ***REMOVED***
+    stage ('JaCoCo') {
+      steps {
+      jacoco()
+      ***REMOVED***
+    ***REMOVED***
+    stage ('Nexus Upload') {
+      steps {
+      nexusArtifactUploader(
+      nexusVersion: 'nexus3',
+      protocol: 'http',
+      nexusUrl: 'nexus_url:8081',
+      groupId: 'myGroupId',
+      version: '1.0-SNAPSHOT',
+      repository: 'maven-snapshots',
+      credentialsId: 'fc0f1694-3036-41fe-b3e3-4c5d96fcfd26',
+      artifacts: [
+      [artifactId: 'MyWebApp',
+      classifier: '',
+      file: 'MyWebApp/target/MyWebApp.war',
+      type: 'war']
+      ])
+      ***REMOVED***
+    ***REMOVED***
+    stage ('DEV Deploy') {
+      steps {
+      echo "deploying to DEV Env "
+      deploy adapters: [tomcat9(credentialsId: '268c42f6-f2f5-488f-b2aa-f2374d229b2e', path: '', url: 'http://your_public_dns:8080')], contextPath: null, war: '**/*.war'
+      ***REMOVED***
+    ***REMOVED***
+    stage ('Slack Notification') {
+      steps {
+        echo "deployed to DEV Env successfully"
+        slackSend(channel:'your slack channel_name', message: "Job is successful, here is the info - Job '${env.JOB_NAME***REMOVED*** [${env.BUILD_NUMBER***REMOVED***]' (${env.BUILD_URL***REMOVED***)")
+      ***REMOVED***
+    ***REMOVED***
 
-    stages {
-        stage('checkout') {
-            steps {
-                checkout([$class: 'GitSCM', branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/Bash-mocart/jumia-devops-challenge']]])
-            ***REMOVED***
+        stage ('DEV Approve') {
+      steps {
+      echo "Taking approval from DEV Manager for QA Deployment"
+        timeout(time: 7, unit: 'DAYS') {
+        input message: 'Do you want to deploy?', submitter: 'admin'
+        ***REMOVED***
+      ***REMOVED***
+    ***REMOVED***
+     stage ('QA Deploy') {
+      steps {
+        echo "deploying to QA Env "
+        deploy adapters: [tomcat9(credentialsId: '268c42f6-f2f5-488f-b2aa-f2374d229b2e', path: '', url: 'http://your_dns_name:8080')], contextPath: null, war: '**/*.war'
         ***REMOVED***
     ***REMOVED***
-***REMOVED***
+    stage ('QA Approve') {
+      steps {
+        echo "Taking approval from QA manager"
+        timeout(time: 7, unit: 'DAYS') {
+        input message: 'Do you want to proceed to PROD?', submitter: 'admin,manager_userid'
+        ***REMOVED***
+      ***REMOVED***
+    ***REMOVED***
