--- a/frontend.yml
+++ b/frontend.yml
@@ -33,7 +33,7 @@ spec:
                 - arm64
       containers:
       - name: frontend
-        image: mohamedaly89/jumia-phone-number-validator:validator-frontend-image
+        image: bashox/jumia-frontend
         ports:
         - name: tcp
           containerPort: 8081
