--- a/ansible/ingress.yml
+++ b/ansible/ingress.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: jumia-frontend
   annotations:
     kubernetes.io/ingress.class: alb
-    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/scheme: internal
 spec:
   defaultBackend:
     service:
