--- a/JenkinsFile
+++ b/JenkinsFile
@@ -3,6 +3,7 @@ pipeline {
  
   tools {
   maven 'Maven3'
+  
   ***REMOVED***
   stages {
     stage ('Build') {
@@ -10,42 +11,10 @@ pipeline {
       sh 'mvn clean install -f MyWebApp/pom.xml'
       ***REMOVED***
     ***REMOVED***
-    stage ('Code Quality') {
-      steps {
-        withSonarQubeEnv('SonarQube') {
-        sh 'mvn -f MyWebApp/pom.xml sonar:sonar'
-        ***REMOVED***
-      ***REMOVED***
-    ***REMOVED***
-    stage ('JaCoCo') {
-      steps {
-      jacoco()
-      ***REMOVED***
-    ***REMOVED***
-    stage ('Nexus Upload') {
-      steps {
-      nexusArtifactUploader(
-      nexusVersion: 'nexus3',
-      protocol: 'http',
-      nexusUrl: 'nexus_url:8081',
-      groupId: 'myGroupId',
-      version: '1.0-SNAPSHOT',
-      repository: 'maven-snapshots',
-      credentialsId: 'fc0f1694-3036-41fe-b3e3-4c5d96fcfd26',
-      artifacts: [
-      [artifactId: 'MyWebApp',
-      classifier: '',
-      file: 'MyWebApp/target/MyWebApp.war',
-      type: 'war']
-      ])
-      ***REMOVED***
-    ***REMOVED***
-    stage ('DEV Deploy') {
-      steps {
-      echo "deploying to DEV Env "
-      deploy adapters: [tomcat9(credentialsId: '268c42f6-f2f5-488f-b2aa-f2374d229b2e', path: '', url: 'http://your_public_dns:8080')], contextPath: null, war: '**/*.war'
-      ***REMOVED***
-    ***REMOVED***
+  
+    
+    
+  
     stage ('Slack Notification') {
       steps {
         echo "deployed to DEV Env successfully"
@@ -64,14 +33,14 @@ pipeline {
      stage ('QA Deploy') {
       steps {
         echo "deploying to QA Env "
-        deploy adapters: [tomcat9(credentialsId: '268c42f6-f2f5-488f-b2aa-f2374d229b2e', path: '', url: 'http://your_dns_name:8080')], contextPath: null, war: '**/*.war'
+        deploy adapters: 
         ***REMOVED***
     ***REMOVED***
     stage ('QA Approve') {
       steps {
         echo "Taking approval from QA manager"
         timeout(time: 7, unit: 'DAYS') {
-        input message: 'Do you want to proceed to PROD?', submitter: 'admin,manager_userid'
+        input message: 
         ***REMOVED***
       ***REMOVED***
     ***REMOVED***
