using provisioners to build docker image

--- a/terraform/ansible/deploy-microservices.yml
+++ b/terraform/ansible/deploy-microservices.yml
@@ -62,6 +62,7 @@
           --name=aws-load-balancer-controller \
           --attach-policy-arn=arn:aws:iam::{{ ACCOUNT_ID ***REMOVED******REMOVED***:policy/AWSLoadBalancerControllerIAMPolicy \
           --approve
+    ignore_errors: yes
 
   - name: "install aws load balancer controller"
     shell: |  
