--- a/terraform/ansible/ingress.yml
+++ b/terraform/ansible/ingress.yml
@@ -5,8 +5,8 @@ metadata:
   namespace: jumia-frontend
   annotations:
     kubernetes.io/ingress.class: alb
-    alb.ingress.kubernetes.io/scheme: internal
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8081***REMOVED***, {"HTTP": 443***REMOVED***]'
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8081***REMOVED***]'
 spec:
   defaultBackend:
     service:
