--- a/terraform/ansible/deploy-microservices.yml
+++ b/terraform/ansible/deploy-microservices.yml
@@ -44,7 +44,7 @@
     shell: |  
           eksctl utils associate-iam-oidc-provider \
           --region eu-west-3 \
-          --cluster {{ CLUSTER_NAME ***REMOVED******REMOVED*** \
+          --cluster {{ CLUSTER_NAME }} \
           --approve
 
   - name: "create IAM Policy"
@@ -60,7 +60,7 @@
           --cluster=eks \
           --namespace=kube-system \
           --name=aws-load-balancer-controller \
-          --attach-policy-arn=arn:aws:iam::{{ ACCOUNT_ID ***REMOVED******REMOVED***:policy/AWSLoadBalancerControllerIAMPolicy \
+          --attach-policy-arn=arn:aws:iam::{{ ACCOUNT_ID }}:policy/AWSLoadBalancerControllerIAMPolicy \
           --approve
     
 
@@ -68,7 +68,7 @@
     shell: |  
           helm repo add eks https://aws.github.io/eks-charts
           kubectl apply -k "github.com/aws/eks-charts/stable/aws-load-balancer-controller//crds?ref=master"
-          helm upgrade -i aws-load-balancer-controller eks/aws-load-balancer-controller -n kube-system --set clusterName={{ CLUSTER_NAME ***REMOVED******REMOVED*** --set serviceAccount.create=false --set serviceAccount.name=aws-load-balancer-controller
+          helm upgrade -i aws-load-balancer-controller eks/aws-load-balancer-controller -n kube-system --set clusterName={{ CLUSTER_NAME }} --set serviceAccount.create=false --set serviceAccount.name=aws-load-balancer-controller
         
 
 
