--- a/terraform/ansible/ingress.yml
+++ b/terraform/ansible/ingress.yml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8081***REMOVED***]'
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8081}]'
 spec:
   defaultBackend:
     service:
