--- a/terraform/ansible/roles/task/main.yml
+++ b/terraform/ansible/roles/task/main.yml
@@ -2,7 +2,7 @@
 
 - name: Create a k8s namespace
   kubernetes.core.k8s:
-    name: '{{ item ***REMOVED******REMOVED***'
+    name: '{{ item }}'
     api_version: v1
     kind: Namespace
     state: present
